--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@aws-cdk/aws-s3": "^1.75.0",
+    "@aws-cdk/core": "^1.75.0",
+    "aws-sdk": "^2.799.0",
     "next": "^10.0.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "swr": "^0.3.9"
   }
 }
