--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "swr": "^0.3.9"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.10",
+    "@types/react": "^17.0.0",
+    "typescript": "^4.1.2"
   }
 }
