--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@aws-cdk/aws-s3": "^1.75.0",
     "@aws-cdk/core": "^1.75.0",
     "aws-sdk": "^2.799.0",
+    "leaflet": "^1.7.1",
     "next": "^10.0.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-leaflet": "^3.0.2",
     "swr": "^0.3.9"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.5.19",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
     "typescript": "^4.1.2"
