--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@aws-cdk/aws-s3": "^1.75.0",
     "@aws-cdk/core": "^1.75.0",
+    "@react-rxjs/core": "^0.6.1",
     "aws-sdk": "^2.799.0",
     "leaflet": "^1.7.1",
     "next": "^10.0.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-leaflet": "^3.0.2",
+    "rxjs": "^6.6.3",
     "swr": "^0.3.9"
   },
   "devDependencies": {
