--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@aws-cdk/aws-s3": "^1.75.0",
     "@aws-cdk/core": "^1.75.0",
+    "@material-ui/core": "^4.11.2",
     "@react-rxjs/core": "^0.6.1",
     "aws-sdk": "^2.799.0",
     "leaflet": "^1.7.1",
