--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "leaflet": "^1.7.1",
     "next": "^10.0.0",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.1",
     "react-leaflet": "^3.0.2",
     "rxjs": "^6.6.3",
     "swr": "^0.3.9"
@@ -25,6 +25,7 @@
     "@types/leaflet": "^1.5.19",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "typescript": "^4.1.2"
   }
 }
