--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "aws-sdk": "^2.799.0",
+    "formik": "^2.2.6",
     "leaflet": "^1.7.1",
+    "lodash": "^4.17.20",
     "next": "^10.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
