--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@aws-cdk/aws-s3": "^1.75.0",
     "@aws-cdk/core": "^1.75.0",
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@react-rxjs/core": "^0.6.1",
     "@types/leaflet": "^1.5.19",
     "@types/node": "^14.14.10",
