--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/leaflet": "^1.5.19",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
+    "@types/mongodb": "^3.6.3",
+    "mongodb": "^3.6.3",
     "@types/react-dom": "^17.0.0",
     "aws-sdk": "^2.799.0",
     "formik": "^2.2.6",
