--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@aws-cdk/aws-s3": "^1.75.0",
@@ -14,23 +17,60 @@
     "@material-ui/icons": "^4.11.2",
     "@react-rxjs/core": "^0.6.1",
     "@types/leaflet": "^1.5.19",
-    "@types/node": "^14.14.10",
-    "@types/react": "^17.0.0",
     "@types/mongodb": "^3.6.3",
-    "mongodb": "^3.6.3",
-    "@types/react-dom": "^17.0.0",
+    "@types/node": "^14.14.10",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "@types/sax": "^1.2.1",
     "aws-sdk": "^2.799.0",
     "formik": "^2.2.6",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.20",
+    "mongodb": "^3.6.3",
     "next": "^10.0.3",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "^16.14.0",
     "react-leaflet": "^3.0.2",
     "rxjs": "^6.6.3",
+    "sax": "^1.2.4",
     "swr": "^0.3.9"
   },
   "devDependencies": {
-    "typescript": "^4.1.2"
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^26.0.20",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    },
+    "moduleDirectories": [
+      "node_modules",
+      "<rootDir>"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "testMatch": [
+      "test/**/*.(ts|tsx)",
+      "**/*.spec.(ts|tsx)"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "./.next/",
+      "./node_modules/"
+    ],
+    "globals": {
+      "ts-jest": {
+        "tsconfig": "tsconfig.jest.json"
+      }
+    }
   }
 }
